# General-CS-Knowledge

./: .gitignore  README.md
cpp-knowledge/: README.md
git-knowledge/: README.md
ros-knowledge/: README.md
src-cpp-knowledge/: generic_fucntion_pointer.c
src-cpp-knowledge/char_array/: test_copy_char_array.cpp
src-cpp-knowledge/csv_io/: a.out  read_csv.cpp  three_cols_copy.csv
src-cpp-knowledge/curl/: download  page  road  test_curl.c
src-cpp-knowledge/fstream/: test.txt  test_ifstream.cpp  test_ofstream.cpp
src-cpp-knowledge/graph/: graph_node.cpp
src-cpp-knowledge/list_files/: list_files.cpp
src-cpp-knowledge/malloc_memset/: test_size_of  test_size_of.c
src-cpp-knowledge/misc/: interest  tax_count.cpp
src-cpp-knowledge/msg_queue/: kirc.c  read  sender.c  spock.c  write
src-cpp-knowledge/open/: test_open_fd.cpp  text.txt
src-cpp-knowledge/segment_tree/: acwing_243.cpp
src-cpp-knowledge/semaphore/: semdemo  semdemo.c  semrm  semrm.c
src-cpp-knowledge/shared_memory/: client  server  shm_client  shm_client.c  shm_client_struct.c  shm_server  shm_server.c  shm_server_struct.c  struct_client  struct_server
src-cpp-knowledge/std_io/: a.out  input_with_istream.cpp  read_getline.cpp  test_cin.cpp  test_string_stream.cpp  (+1 more)
src-geo-knowledge/: intersection_of_rectangles.cpp
src-optimization-knowledge/iptop_cppad_example/: CMakeLists.txt  ipopt_solve_get_started.cpp
src-optimization-knowledge/iptop_cppad_example/src/: cppad_index_sort.cpp  ipopt_solve_get_started.cpp  ipopt_without_cppad_example.cpp  ipopt_without_cppad_example.hpp
(+15 files in other folders)
